--- a/src/Components/ThemeButton/themebtn.module.scss
+++ b/src/Components/ThemeButton/themebtn.module.scss
@@ -12,7 +12,6 @@
   justify-content: space-between;
   background-color: var(--theme-bg);
   cursor: pointer;
-  margin-left: 28px;
   outline: solid 1.5px var(--theme-bg);
   position: relative;
 
